Added a user form

--- a/views/template_user.phtml
+++ b/views/template_user.phtml
@@ -1,3 +1,15 @@
+<h1>New User</h1>
 <pre>
 <?php @var_dump($user); ?>
 </pre>
+<form method="POST">
+<div class="mb-3">
+  <label for="name" class="form-label">Name</label>
+  <input type="text" required class="form-control" id="name" name="name" placeholder="Your name">
+  <label for="email" class="form-label">Email</label>
+  <input type="email" required class="form-control" id="email" name="email" placeholder="Your email">
+  <label for="password" class="form-label">Password</label>
+  <input type="password" required class="form-control" id="password" name="password" placeholder="Your password">
+  <button class="mt-4 btn btn-primary" type="submit" id="send" name="submit">Send</button>
+</div>
+</form>
