Beginning using User class

--- a/views/template_user.phtml
+++ b/views/template_user.phtml
@@ -1,6 +1,7 @@
 <h1>New User</h1>
 <pre>
-<?php @var_dump($user); ?>
+<?php @var_dump($_POST); ?>
+<?php @var_dump($data['user']); ?>
 </pre>
 <form method="POST">
 <div class="mb-3">
