--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><?= CONFIG_SITE_TITLE ?></title>
+    <link rel="shortcut icon" href="./assets/img/php_icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>OOP MVC PHP</title>
+    <style>
+        main {
+            margin-top: 6rem;
+        }
+
+        img.logo {
+            width: 60px;
+        }
+
+        h4.card-title {
+            min-height: 6rem;
+        }
+
+        .car-img-top,
+        .carousel-item img {
+            aspect-ratio: 16/9;
+            object-fit: cover;
+        }
+
+        #homeCarousel {
+            /* max-width:700px; */
+            margin: auto;
+        }
+
+        .carousel-caption {
+            background-color: rgba(0, 0, 0, 0.3);
+        }
+
+        .card,
+        .card-img-top,
+        .btn,
+        .form-control {
+            border-radius: 0;
+        }
+        p{
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
-<body>
-<main class="container-fluid">
-<?= $template ?>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<body class="d-flex flex-column h-100">
+    <nav class="navbar navbar-expand-lg bg-body-secondary fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="./assets/img/php_icon.png" alt="<?= CONFIG_SITE_TITLE ?>" class="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <?php foreach (CONFIG_ROUTES as $key => $value) : ?>
+                        <li class="nav-item">
+                            <a class="nav-link <?php if ($page === $key) echo "active"; ?>" href="?page=<?= $key ?>">
+                                <?= $value ?>
+                            </a>
+                        </li>
+                    <?php endforeach ?>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Account
+                        </a>
+                        <ul class="dropdown-menu">
+                        <?php if (!isset($_SESSION['user'])): ?>
+                            <li><a class="dropdown-item" href="?page=login">Login</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="?page=register">Register</a></li>
+                            <?php else: ?>
+                            <li><a class="dropdown-item" href="?page=admin_list">Admin</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="?page=logout">Logout</a></li>
+                            <?php endif ?>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input name="page" value="search" type="hidden">
+                    <input name="keywords" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <!-- DANS LE MAIN ON CHARGE LE TEMPLATE CORRESPONDANT A LA PAGE -->
+    <main class="flex-shrink-0 container-fluid">
+    <?= $template ?>
+    </main>
+    <!-- TOUT LE CONTENU DANS LE TEMPLATE CORRESPONDANT EST DANS LE MAIN  -->
+
+    <footer class="bg-body-secondary footer mt-auto p-3">
+        <section class="container-fluid text-center">
+            &copy; DWWM CCI LYON
+        </section>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
+
 </html>
