Winter is coming have a nice day and merry christmas

--- a/views/template_home.phtml
+++ b/views/template_home.phtml
@@ -46,5 +46,5 @@ $pictures = $data['pictures'];
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
-<p><?= $data['lorem'] ?></p>
+<h2><?= $data['title'] ?></h2>
+<p><?= $data['parag'] ?></p>
