Added Google recaptcha to register and login controller/template

--- a/views/template_home.phtml
+++ b/views/template_home.phtml
@@ -7,6 +7,8 @@ $pictures = $data['pictures'];
 ?>
 <h1 class="text-center">Home of <br><?= CONFIG_SITE_TITLE ?></h1>
 
+<?php // var_dump( unserialize($_COOKIE['OOP_MVC_PHP_AUTH']) ); ?>
+
 <!-- DEBUT DU CAROUSEL -->
 <div id="homeCarousel" class="carousel slide" data-bs-touch="true">
 
