--- a/views/template_login.phtml
+++ b/views/template_login.phtml
@@ -1,27 +1,40 @@
 <?php
+
 /**
  * Il peut s'avérer pratique de récupérer ici $data
  * Et éventuellement de déclarer des variables de traitement
  * */
 $errors = $data['errors'];
 ?><h1 class="text-center">Login</h1>
+
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 <?php if (!empty($errors)) : ?>
-    <div class="alert alert-danger" role="alert">
-        <?php foreach ($errors as $error) : ?>
-            <p><?= $error ?></p>
-        <?php endforeach; ?>
-    </div>
+  <div class="alert alert-danger" role="alert">
+    <?php foreach ($errors as $error) : ?>
+      <p><?= $error ?></p>
+    <?php endforeach; ?>
+  </div>
 <?php endif; ?>
 <form method="POST">
-<div class="mb-3">
-  <label for="email" class="form-label">Email</label>
-  <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-</div>
-<div class="mb-3">
-  <label for="password" class="form-label">Password</label>
-  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-</div>
-<div class="mb-3">
-  <input type="submit" class="btn btn-primary" name="submit" value="Login">
-</div>
+  <div class="mb-3">
+    <label for="email" class="form-label">Email</label>
+    <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+  </div>
+  <div class="mb-3">
+    <label for="password" class="form-label">Password</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+  </div>
+  <div class="mb-3">
+    <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="remember_me" name="remember_me">
+    <label for="remember_me" class="form-check-label">Remember Me ?</label>
+    </div>
+  </div>
+  <div class="mb-3">
+    <div class="g-recaptcha" data-sitekey="<?= GOOGLE_RECAPTCHA_PUBLIC_KEY ?>"></div>
+  </div>
+  <div class="mb-3">
+    <input type="submit" class="btn btn-primary" name="submit" value="Login">
+  </div>
 </form>
