--- a/views/template_login.phtml
+++ b/views/template_login.phtml
@@ -26,10 +26,12 @@ $errors = $data['errors'];
     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
   </div>
   <div class="mb-3">
+    <?php if (isset($_SESSION['cookie']) && $_SESSION['cookie']===true): ?>
     <div class="form-check">
     <input type="checkbox" class="form-check-input" id="remember_me" name="remember_me">
     <label for="remember_me" class="form-check-label">Remember Me ?</label>
     </div>
+    <?php endif ?>
   </div>
   <div class="mb-3">
     <div class="g-recaptcha" data-sitekey="<?= GOOGLE_RECAPTCHA_PUBLIC_KEY ?>"></div>
