Added a new method generating a key

--- a/views/template_login.phtml
+++ b/views/template_login.phtml
@@ -38,5 +38,6 @@ $errors = $data['errors'];
   </div>
   <div class="mb-3">
     <input type="submit" class="btn btn-primary" name="submit" value="Login">
+    <a href="?page=resetpass">Mot-de-passe oublié ?</a>
   </div>
 </form>
