--- a/views/template_reset_new_password.phtml
+++ b/views/template_reset_new_password.phtml
@@ -20,25 +20,27 @@ $isPasswordUpdated = $data['isPasswordUpdated'];
     <?php if (!$isPasswordUpdated) : ?>
         <form method="POST" id="registration_form">
             <div class="mb-3">
-                <label for="src" class="form-label">Password<input type="checkbox" onclick="toggleVisible('password')"></label>
+                <label for="src" class="form-label">Password</label>
                 <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                <p><input type="checkbox" onclick="toggleVisible('password')"> Afficher</p>
             </div>
             <div class="mb-3">
-                <label for="confirm_password" class="form-label">Confirm Password<input type="checkbox" onclick="toggleVisible('confirm_password')"></label>
+                <label for="confirm_password" class="form-label">Confirm Password</label>
                 <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="Confirm Password">
+                <p><input type="checkbox" onclick="toggleVisible('confirm_password')"> Afficher</p>
             </div>
             <div class="mb-3">
-                <input type="button" class="btn btn-primary" name="registration_btn" id="registration_btn" value="Register">
+                <input type="button" class="btn btn-primary" name="registration_btn" id="registration_btn" value="Change Password">
             </div>
         </form>
     <?php else : ?>
         <div class="alert alert-success" role="alert">
-            Mot-de-passe ajouté !!! Vous pouvez vous <a href="?page=login">connecter</a> desormais.
+            Mot-de-passe modifié !!! Vous pouvez vous <a href="?page=login">connecter</a> desormais.
         </div>
     <?php endif; ?>
 <?php else : ?>
     <div class="alert alert-danger" role="alert">
-    <p>Opération impossible vous êtes un imposteur et vous avez été démasqué !</p>
+    <p>Opération impossible vous êtes un imposteur et vous avez été démasqué ou la clé est expirée... au choix !</p>
     </div>
 <?php endif; ?>
 <script>
